[tool.poetry]
name = "HtmLaTeX"
version = "0.1.0"
description = "Like HTML, but not LaTeX? HtmLaTeX compiles HTML code to LaTeX."
authors = ["Linus <linuskmr.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/linuskmr/HtmLaTeX"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
